--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,15 +5,155 @@ html {
 
 body {
   margin: 0;
+  min-height: 100%;
   padding: 0;
 }
 
 .tier {
-  &-1  {
+  &-1 {
+    height: 100px;
+  }
 
+  &-2 {
+    height: 70px;
+  }
+
+  &-3 {
+    height: 50px;
   }
 }
 
+.board {
+  background-color: #ccc;
+  height: 100%;
+  position: relative;
+}
+
 .logos {
-  width: 100px;
+  margin: 10px;
+  //position: absolute;
+
+  &[src*=js] {
+
+  }
+
+  &[src*=jquery] {
+
+  }
+
+  &[src*=backbone] {
+
+  }
+
+  &[src*=bower] {
+
+  }
+
+  &[src*=d3] {
+
+  }
+
+  &[src*=github] {
+
+  }
+
+  &[src*=nodejs] {
+
+  }
+
+  &[src*=react] {
+
+  }
+
+  &[src*=sass] {
+
+  }
+
+  &[src*=php] {
+
+  }
+
+  &[src*=html-5] {
+
+  }
+
+  &[src*=css-3] {
+
+  }
+
+  &[src*=gulp] {
+
+  }
+
+  &[src*=bootstrap] {
+
+  }
+
+  &[src*=codepen] {
+
+  }
+
+  &[src*=browserify] {
+
+  }
+
+  &[src*=cordova] {
+
+  }
+
+  &[src*=grunt] {
+
+  }
+
+  &[src*=handlebars] {
+
+  }
+
+  &[src*=ionic] {
+
+  }
+
+  &[src*=mocha] {
+
+  }
+
+  &[src*=mongodb] {
+
+  }
+
+  &[src*=mysql] {
+
+  }
+
+  &[src*=wordpress] {
+
+  }
+
+  &[src*=meteor] {
+
+  }
+
+  &[src*=npm] {
+
+  }
+
+  &[src*=polymer] {
+
+  }
+
+  &[src*=python] {
+
+  }
+
+  &[src*=ruby] {
+
+  }
+
+  &[src*=rest] {
+
+  }
+
+  &[src*=yeoman] {
+
+  }
 }
