--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -9,3 +9,6 @@ $screen-xxs-max: $screen-xxs - 1;
 $screen-smt: 600px;
 $screen-smt-min: $screen-smt;
 $screen-smt-max: $screen-smt - 1;
+
+$screen-md: 1024px;
+$screen-lg: 1280px;
