--- a/app/styles/base/_bootstrap.scss
+++ b/app/styles/base/_bootstrap.scss
@@ -11,8 +11,7 @@
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/scaffolding';
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/type';
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/code';
-//@import 'bootstrap-sass/assets/stylesheets/bootstrap/grid';
-@import 'bootstrap-grid';
+@import 'bootstrap-sass/assets/stylesheets/bootstrap/grid';
 //@import 'bootstrap-sass/assets/stylesheets/bootstrap/tables';
 //@import 'bootstrap-sass/assets/stylesheets/bootstrap/forms';
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/buttons';
@@ -51,5 +50,4 @@
 @import 'bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities';
 
 // Addons
-@import 'bootstrap-grid';
 @import 'bootstrap-theme';
