--- a/app/styles/_logos.scss
+++ b/app/styles/_logos.scss
@@ -9,20 +9,42 @@ $logo-opacity: 0.7;
   z-index: 5;
 
   @include lg {
+    height: 280px;
     position: fixed;
   }
 
   &.logos--fade img {
-    animation: fade 1s forwards;
+    &:nth-of-type(3n+1) {
+      opacity: 0 !important;
+      transition: opacity 0.5s;
+    }
+
+    &:nth-of-type(3n+2) {
+      opacity: 0 !important;
+      transition: opacity 1s;
+    }
+
+    &:nth-of-type(3n+3) {
+      opacity: 0 !important;
+      transition: opacity 1.5s;
+    }
   }
 
   &.logos--show img {
-    //animation: fade 1s alternate backwards;
+    &:nth-of-type(3n+1) {
+      transition: opacity 3s;
+    }
+
+    &:nth-of-type(3n+2) {
+      transition: opacity 2s;
+    }
+
+    &:nth-of-type(3n+3) {
+      transition: opacity 1s;
+    }
   }
 
   img {
-    animation-direction: normal, reverse;
-    animation-duration: 1s;
     opacity: 0;
     position: absolute;
     transition: all 0.3s cubic-bezier(0.55, 0.085, 0.385, 1.65);
