--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,4 +1,4 @@
-$brand-primary: #e43c3c;
+$brand-primary: #f05350; //e43c3c;
 $headings-font-family: 'Roboto Condensed', sans-serif;
 $headings-font-weight: 700;
 
