--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,7 +11,7 @@ html {
 
 body {
   background-attachment: fixed;
-  background-image: linear-gradient(#93a0a9, #fff6e4);
+  background-image: linear-gradient(#f1f1f1, #fff);
   background-repeat: no-repeat;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
@@ -46,13 +46,9 @@ body {
     margin-top: $grid-gutter-width * 2;
   }
 
-  > * {
-    z-index: 10;
-  }
-
   h1 {
-    background-color: $brand-primary;
-    color: #000;
+    background-color: #000;
+    color: #fff;
     display: inline-block;
     font-family: Georgia, serif;
     font-size: 3rem;
@@ -61,6 +57,8 @@ body {
     line-height: 1em;
     margin: 0 0 1rem;
     padding: 10px;
+    position: relative;
+    z-index: 10;
 
     @include lg {
       font-size: 5rem;
@@ -69,8 +67,10 @@ body {
   }
 
   h2 {
+    display: inline-block;
     font-size: 1.8rem;
     margin: 0;
+    position: relative;
 
     @include lg {
       font-size: 3rem;
@@ -78,8 +78,11 @@ body {
   }
 
   > .menu {
-    margin: 10px auto 0;
+    display: inline-block;
+    margin-top: 10px;
+    position: relative;
     width: 200px;
+    z-index: 10;
 
     @include lg {
       width: 340px;
@@ -87,7 +90,7 @@ body {
 
     a {
       color: #000;
-      display: inline-block;
+
       float: left;
       position: relative;
       text-decoration: none;
@@ -179,30 +182,54 @@ main {
       display: block;
       margin-top: 3rem;
     }
+
+    em {
+      color: #555;
+      display: block;
+      margin-top: 10px;
+    }
   }
 }
 
 .projects {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-between;
 
   > a {
     display: inline-block;
-    padding: 0 100px;
-    text-align: center;
+    font-size: 1.6rem;
+    margin-bottom: $grid-gutter-width / 2;
+    text-decoration: none;
 
-    &:first-of-type {
-      padding-left: 0;
+    @include sm {
+      text-align: center;
+      width: 50%;
     }
 
-    &:last-of-type {
-      padding-right: 0;
+    @include md {
+      font-size: 1.8rem;
+    }
+
+    @include lg {
+      width: 25%;
     }
 
     img {
-      display: block;
-      margin-bottom: 5px;
-      max-width: 100%;
+      display: inline-block;
+      margin-right: 5px;
+      max-width: 20%;
+      vertical-align: middle;
+
+      @include sm {
+        display: block;
+        margin: 0 auto 5px;
+        max-width: 30%;
+      }
+
+      @include md {
+        max-width: 50%;
+      }
     }
   }
 }
