--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -12,3 +12,6 @@ $screen-smt-max: $screen-smt - 1;
 
 $screen-md: 1024px;
 $screen-lg: 1280px;
+
+$section-color-odd: #fff;
+$section-color-even: #ededed;
