--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,289 +1,10 @@
 @import 'base/variables';
 @import 'base/utils';
 @import 'base/bootstrap';
-@import 'logos';
-@import url('//fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
 
-html {
-  font-size: 62.5%;
-  height: 100%;
-}
+@import url('//fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Open+Sans:800');
 
-body {
-  background-attachment: fixed;
-  background-image: linear-gradient(#f1f1f1, #fff);
-  background-repeat: no-repeat;
-  font-family: 'Roboto Condensed', sans-serif;
-  margin: 0;
-  min-height: 100%;
-  padding: 0 0 $grid-gutter-width;
-}
-
-.main-header {
-  margin: $grid-gutter-width auto;
-  position: relative;
-  text-align: center;
-
-  @include xs {
-    margin-top: 35px;
-  }
-
-  @include sm-only {
-    z-index: 10;
-  }
-
-  @include sm {
-    margin-top: $grid-gutter-width* 1.5;
-  }
-
-  @include md {
-    margin-bottom: $grid-gutter-width * 2;
-    margin-top: $grid-gutter-width * 2;
-  }
-
-  @include lg {
-    margin-bottom: $grid-gutter-width * 2;
-    margin-top: $grid-gutter-width * 2;
-  }
-
-  h1 {
-    background-color: #000;
-    color: #fff;
-    display: inline-block;
-    font-family: Georgia, serif;
-    font-size: 3rem;
-    font-style: italic;
-    font-weight: bold;
-    line-height: 1em;
-    margin: 0 0 1rem;
-    padding: 10px;
-    position: relative;
-    z-index: 10;
-
-    @include lg {
-      font-size: 5rem;
-      padding: 16px;
-    }
-  }
-
-  h2 {
-    display: inline-block;
-    font-size: 1.8rem;
-    margin: 0;
-    position: relative;
-
-    @include lg {
-      font-size: 3rem;
-    }
-  }
-
-  > .menu {
-    display: inline-block;
-    margin-top: 10px;
-    position: relative;
-    width: 200px;
-    z-index: 10;
-
-    @include lg {
-      width: 340px;
-    }
-
-    a {
-      color: #000;
-
-      float: left;
-      position: relative;
-      text-decoration: none;
-
-      @include lg {
-        font-size: 1.6rem;
-      }
-
-      &:before {
-        background: $brand-primary;
-        bottom: 0;
-        content: '';
-        display: block;
-        height: 2px;
-        position: absolute;
-        width: 100%;
-      }
-    }
-
-    a:nth-of-type(2) {
-      float: right;
-    }
-  }
-}
-
-.container {
-  max-width: 960px;
-  width: auto;
-
-  @include sm {
-    margin: 0 $grid-gutter-width;
-  }
-
-  @include md {
-    margin: 0 ($grid-gutter-width * 4);
-  }
-
-  @include lg {
-    margin: 0 auto;
-  }
-}
-
-main {
-  @include lg {
-    position: relative;
-    z-index: 15;
-  }
-}
-
-.section {
-  padding-bottom: $grid-gutter-width;
-
-  &:not(:last-of-type) {
-    @include jagged(#999);
-  }
-
-  &__title {
-    margin: $grid-gutter-width 0;
-  }
-
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-}
-
-.skills {
-  position: relative;
-  z-index: 15;
-
-  .section__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    > li {
-      margin-bottom: $grid-gutter-width / 2;
-      width: 100%;
-
-      @include lg {
-        width: 50%;
-      }
-
-      &:last-of-type {
-        flex-grow: 1;
-      }
-
-      h4 {
-        margin-top: 0;
-      }
-    }
-  }
-}
-
-.experience {
-  .section__list {
-
-    > li {
-      .title {
-        display: block;
-        font-size: 1.6rem;
-      }
-
-      span {
-        color: #666;
-        display: block;
-        margin-top: 3rem;
-      }
-
-      em {
-        color: #555;
-        display: block;
-        margin-top: 10px;
-      }
-    }
-  }
-}
-
-.summary {
-  .section__list {
-    > li {
-      font-size: 1.6rem;
-
-      &:before {
-        content: '—';
-        padding-right: 5px;
-      }
-
-      + li {
-        padding-top: 10px;
-      }
-    }
-  }
-}
-
-.projects {
-  .section__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    > li {
-      display: inline-block;
-
-      margin-bottom: $grid-gutter-width / 2;
-
-      @include sm {
-        text-align: center;
-        width: 50%;
-      }
-
-      @include lg {
-        width: 20%;
-      }
-
-      a {
-        display: block;
-        font-size: 1.6rem;
-        text-align: left;
-        text-decoration: none;
-
-        @include md {
-          font-size: 1.8rem;
-          text-align: center;
-        }
-      }
-
-      .img-wrapper {
-        display: inline-block;
-        height: 0;
-        margin-right: 5px;
-        padding-bottom: 20%;
-        vertical-align: middle;
-        width: 20%;
-
-        @include sm {
-          padding-bottom: 30%;
-          width: 30%;
-        }
-
-        @include md {
-          display: block;
-          margin: 0 auto 5px;
-          padding-bottom: 50%;
-          width: 50%;
-        }
-      }
-
-      img {
-        width: 100%;
-      }
-    }
-  }
-}
-
+@import 'components/common';
+@import 'components/header';
+@import 'components/logos';
+@import 'components/sections';
