--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -14,4 +14,4 @@ $screen-md: 1024px;
 $screen-lg: 1280px;
 
 $section-color-odd: #fff;
-$section-color-even: #ededed;
+$section-color-even: #d1d9e5;
