--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -143,6 +143,11 @@
       + p {
         margin-top: $grid-gutter-width;
       }
+
+      a {
+        color: $text-color;
+        text-decoration: underline;
+      }
     }
   }
 }
