--- a/app/styles/components/_common.scss
+++ b/app/styles/components/_common.scss
@@ -5,6 +5,7 @@ html {
 
 body {
   font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.5rem;
   margin: 0;
   min-height: 100%;
   padding: 0 0 $grid-gutter-width;
