--- a/app/styles/components/_header.scss
+++ b/app/styles/components/_header.scss
@@ -113,6 +113,11 @@
       padding-top: $grid-gutter-width * 2;
     }
 
+    @include sm {
+      padding-left: $grid-gutter-width;
+      padding-right: $grid-gutter-width;
+    }
+
     @include md {
       max-width: 680px;
       padding: ($grid-gutter-width * 3) ($grid-gutter-width / 2);
@@ -120,11 +125,11 @@
 
     @include lg {
       max-width: 900px;
-      padding: ($grid-gutter-width * 2) ($grid-gutter-width / 2);
+      padding: ($grid-gutter-width * 3) 0;
     }
 
     p {
-      font-size: 1.8rem;
+      font-size: 2.2rem;
       font-weight: 700;
       margin: 0;
 
